--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^11.1.2",
+    "@angular-devkit/schematics": "^11.1.2",
     "@angular/animations": "~11.1.0",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
-    "@angular/core": "~11.1.0",
+    "@angular/core": "^11.1.1",
     "@angular/forms": "~11.1.0",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
@@ -28,6 +30,7 @@
     "@angular/compiler-cli": "~11.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
